--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "manifester",
-  "version": "0.0.3",
-  "repository": "chrisvariety/manifester",
+  "version": "2.0.0",
+  "repository": "thoughtindustries/manifester",
   "description": "A fingerprint manifest reader.",
   "keywords": [
     "asset",
